--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"@types/node": "^16.18.32",
 		"@types/react": "^18.2.7",
 		"@types/react-dom": "^18.2.4",
+		"axios": "^1.4.0",
 		"babel-plugin-macros": "^3.1.0",
+		"googleapis": "^118.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.8.0",
