--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"@types/react-dom": "^18.2.4",
 		"axios": "^1.4.0",
 		"babel-plugin-macros": "^3.1.0",
+		"date-fns": "^2.30.0",
+		"numeral": "^2.0.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.8.0",
@@ -49,6 +51,7 @@
 	"devDependencies": {
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/forms": "^0.5.3",
+		"@types/numeral": "^2.0.2",
 		"tailwindcss": "^3.3.2"
 	}
 }
